[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pier-os-clock"
version = "1.1.3"
description = "Minimal terminal clock tool for Linux/WSL"
authors = [
    { name = "Dogukan Sahil", email = "dogukansahil@protonmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.scripts]
pier-os-clock = "pier_os_clock:main"
